Fixed the alignment of the sidebar items

--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -3,5 +3,6 @@
     width: 10%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
